--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint .",
+    "lint": "eslint --debug src/",
     "lint:fix": "eslint --fix",
     "format": "prettier --write './**/*.{js,jsx}' --config ./.prettierrc.json"
   },
